# mrreview

./: .gitignore  README.md  debug_eslint.py  debug_git.py  eslint.config.js  main.py  package.json  pyproject.toml  report.html  requirements.txt
src/ai/: enricher.py
src/analysis/: ast_parser.py  issue_detector.py  models.py
src/cqia_agent/: core_analyzer.py  main.py
src/cqia_agent/ai/: caller.py  enricher.py
src/cqia_agent/analysis/: issue_detector.py
src/cqia_agent/integrations/: github_pr.py
src/cqia_agent/qa/: agent.py  indexer.py  retriever.py
src/cqia_agent/reporting/: html_generator.py  visualizer.py
src/cqia_agent/reporting/templates/: report_template.html
src/qa/: agent.py  indexer.py  retriever.py
src/reporting/: display.py  visualizer.py
src/utils/: file_handler.py
test/: test.js  test.py
